  * ensure that apti18n.h is included last as advertised (Closes: #671623)
  * apt-pkg/acquire-worker.cc:
    - revert the use of FileFd::Write in OutFdReady as we don't want error
      reports about EAGAIN here as we retry later. Thanks to YOSHINO Yoshihito
      for the report. (Closes: #671721)
  * apt-pkg/contrib/fileutl.cc:
    - check that the fd which are closed are valid

 -- David Kalnischkies <kalnischkies@gmail.com>  Mon, 07 May 2012 21:12:23 +0200

apt (0.9.2) unstable; urgency=low

  [ Michael Vogt ]
  * apt-inst/contrib/extracttar.cc:
    - ensure that in StartGzip the InFd is set to "AutoClose" to ensure
      that the pipe is closed when InFd is closed. This fixes a Fd leak
      (LP: #985452)

  [ David Kalnischkies ]
   * apt-pkg/deb/deblistparser.cc:
    - only treat the native apt as essential by default (Closes: #669377)
  * apt-pkg/contrib/fileutl.cc:
    - redirect stderr from compressors to /dev/null
  * apt-pkg/aptconfiguration.cc:
    - if the compressor is not installed, but we link against it's
      library accept it as a CompressionType (Closes: #669328)
  * apt-pkg/contrib/sha2_internal.cc:
    - do not use the input data directly but memcpy it instead as
      it could be unaligned as in the http-transport which causes
      a sigbus error on sparc (Closes: #669061)
  * apt-pkg/cacheset.cc:
    - actually return to the fallback modifier if we have detected we
      should for packagenames which look like modifiers (Closes: #669591)

  [ Adam Conrad ]
  * Set FD_CLOEXEC on history.log's FD (Closes: #610069, LP: #636010)

  [ Thorsten Spindler ]
  * apt-pkg/deb/dpkgpm.cc:
    - do not crash if (*I).Pkg is NULL (LP: #939867)

  [ Malcolm Scott ]
  * apt-pkg/packagemanager.cc:
    - iterate over all pre-depends or-group member instead of looping
      endlessly over the first member in SmartUnpack (LP: #985852)

 -- Michael Vogt <mvo@debian.org>  Fri, 20 Apr 2012 11:26:16 +0200

apt (0.9.1) unstable; urgency=low
