@@ -40,6 +40,8 @@ apt (0.9.3) UNRELEASED; urgency=low
       for the report. (Closes: #671721)
   * apt-pkg/contrib/fileutl.cc:
     - check that the fd which are closed are valid
+  * apt-pkg/aptconfiguration.cc:
+    - use NULL instead of "" for no (un)compress parameters
 
  -- David Kalnischkies <kalnischkies@gmail.com>  Mon, 07 May 2012 21:12:23 +0200
 
